--- a/MHRiseModManager/Views/MainWindow.xaml
+++ b/MHRiseModManager/Views/MainWindow.xaml
@@ -125,7 +125,7 @@
                         </WrapPanel>
                         <WrapPanel>
                             <TextBlock Text="ファイルサイズ：" Margin="0,0,5,0"/>
-                            <TextBlock Text="{Binding NowModSize.Value}"/>
+                            <TextBlock Text="{Binding NowModSize.Value, Converter={StaticResource FileSizeConverter}}"/>
                         </WrapPanel>                        
                     </StackPanel>
                     <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
