--- a/MHRiseModManager/Views/MainWindow.xaml
+++ b/MHRiseModManager/Views/MainWindow.xaml
@@ -46,6 +46,9 @@
                 <MenuItem Header="リストア" Command="{Binding RestoreCommand}"/>
                 <MenuItem Header="終了" Command="{Binding MenuCloseCommand}"  CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}"/>
             </MenuItem>
+            <MenuItem Header="設定(_S)">
+                <MenuItem Header="設定の初期化" Command="{Binding SettingResetCommand}"/>
+            </MenuItem>
         </Menu>
         <Grid Margin="5" Grid.Row="1">
             <Grid.ColumnDefinitions>
