--- a/MHRiseModManager/Views/MainWindow.xaml
+++ b/MHRiseModManager/Views/MainWindow.xaml
@@ -52,13 +52,15 @@
         </Menu>
         <Grid Margin="5" Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.5*"/>
-                <ColumnDefinition Width="9*"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="9*"/>
+                <ColumnDefinition Width="0.8*"/>
+                <ColumnDefinition Width="0.8*"/>
             </Grid.ColumnDefinitions>
             <Label VerticalAlignment="Center" Grid.Column="0" Padding="0">ゲームフォルダ</Label>
             <TextBox VerticalContentAlignment="Center" VerticalAlignment="Center" Padding="0" Grid.Column="1" IsReadOnly="True" Text="{Binding GameDirectoryPath.Value}"/>
-            <Button VerticalAlignment="Center" Padding="0" Margin="0" Grid.Column="2" Width="100" Content="開く" Command="{Binding OpenGameFolderCommand}"/>
+            <Button VerticalAlignment="Center" Padding="0" Margin="0" Grid.Column="2" Width="80" Content="参照" Command="{Binding SelectGameFolderCommand}"/>
+            <Button VerticalAlignment="Center" Padding="0" Margin="0" Grid.Column="3" Width="80" Content="開く" Command="{Binding OpenGameFolderCommand}"/>
         </Grid>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
