--- a/MHRiseModManager/Views/MainWindow.xaml
+++ b/MHRiseModManager/Views/MainWindow.xaml
@@ -44,8 +44,13 @@
             <MenuItem Header="ファイル(_F)">
                 <MenuItem Header="バックアップ" Command="{Binding BackUpCommand}"/>
                 <MenuItem Header="リストア" Command="{Binding RestoreCommand}"/>
-                <MenuItem Header="CSVエクスポート" Command="{Binding CSVExportCommand}"/>
+
                 <MenuItem Header="終了" Command="{Binding MenuCloseCommand}"  CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}"/>
+            </MenuItem>
+            <MenuItem Header="Mod(_M)">
+                <MenuItem Header="CSVインポート" Command="{Binding CSVImportCommand}"/>
+                <MenuItem Header="CSVエクスポート" Command="{Binding CSVExportCommand}"/>
+                <MenuItem Header="一括登録解除" Command="{Binding ALLClearCommand}"/>
             </MenuItem>
             <MenuItem Header="設定(_S)">
                 <MenuItem Header="設定の初期化" Command="{Binding SettingResetCommand}"/>
