--- a/MHRiseModManager/Views/MainWindow.xaml
+++ b/MHRiseModManager/Views/MainWindow.xaml
@@ -173,6 +173,12 @@
                             </Label>
                         </WrapPanel>
                         <WrapPanel>
+                            <Label Content="バージョン：" Margin="0,0,0,0" Padding="3"/>
+                            <Label Padding="3">
+                                <TextBlock Text="{Binding NowVersion.Value}"/>
+                            </Label>
+                        </WrapPanel>
+                        <WrapPanel>
                             <Label Content="URL：" Margin="0,0,0,0" Padding="3"/>
                             <Label Padding="3">
                                 <Hyperlink NavigateUri="{Binding NowModURL.Value}" Command="{Binding NavigateCommand}">
