--- a/MHRiseModManager/Views/SettingWindow.xaml
+++ b/MHRiseModManager/Views/SettingWindow.xaml
@@ -6,10 +6,16 @@
         xmlns:local="clr-namespace:MHRiseModManager.Views"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
+        xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+        Dialog:DialogParticipation.Register="{Binding}"
         xmlns:vm="clr-namespace:MHRiseModManager.ViewModels"
         Title="SettingWindow" Height="450" Width="800">
     <mah:MetroWindow.DataContext>
-        <vm:SettingViewModel/>
+        <vm:SettingViewModel>
+            <vm:SettingViewModel.MahAppsDialogCoordinator>
+                <Dialog:DialogCoordinator/>
+            </vm:SettingViewModel.MahAppsDialogCoordinator>
+        </vm:SettingViewModel>
     </mah:MetroWindow.DataContext>
     <Grid Margin="5">
         <Grid.RowDefinitions>
@@ -26,10 +32,10 @@
                 <RowDefinition Height="50" />
                 <RowDefinition Height="50" />
             </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Grid.Column="1" Padding="5" Text="起動時のバージョンチェック" Margin="5" VerticalAlignment="Center"/>
-            <CheckBox Grid.Row="0" Grid.Column="2" Margin="5" IsChecked="{Binding IsInit}" HorizontalAlignment="Left" Content="起動時にバージョンチェックを行う"/>
+            <TextBlock Grid.Row="0" Grid.Column="1" Padding="5" Text="バージョンチェック" Margin="5" VerticalAlignment="Center"/>
+            <CheckBox Grid.Row="0" Grid.Column="2" Margin="5" IsChecked="{Binding StartUpVersionCheck.Value}" HorizontalAlignment="Left" Content="起動時にバージョンチェックを行う"/>
             <TextBlock Grid.Row="1" Grid.Column="1" Padding="5" Text="設定を初期化する" Margin="5" VerticalAlignment="Center"/>
-            <Button Grid.Row="1" Grid.Column="2" Margin="5" Content="初期化" Width="50" HorizontalAlignment="Left"/>
+            <Button Grid.Row="1" Grid.Column="2" Margin="5" Content="初期化" Command="{Binding SettingResetCommand}" Width="50" HorizontalAlignment="Left"/>
         </Grid>
         <StackPanel Grid.Row="1" Orientation="Vertical">
             <Button Width="100" Content="OK" Command="{Binding CloseWindow}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}" Margin="5"/>
