--- a/MHRiseModManager/Views/SettingWindow.xaml
+++ b/MHRiseModManager/Views/SettingWindow.xaml
@@ -5,6 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MHRiseModManager.Views"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:rp="clr-namespace:Reactive.Bindings.Interactivity;assembly=ReactiveProperty.WPF"
+        xmlns:converter="clr-namespace:MHRiseModManager.Views.Converter"
         mc:Ignorable="d"
         xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
         Dialog:DialogParticipation.Register="{Binding}"
@@ -31,14 +34,55 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="50" />
                 <RowDefinition Height="50" />
+                <RowDefinition Height="50" />
+                <RowDefinition Height="50" />
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" Grid.Column="1" Padding="5" Text="バージョンチェック" Margin="5" VerticalAlignment="Center"/>
             <CheckBox Grid.Row="0" Grid.Column="2" Margin="5" IsChecked="{Binding StartUpVersionCheck.Value}" HorizontalAlignment="Left" Content="起動時にバージョンチェックを行う"/>
             <TextBlock Grid.Row="1" Grid.Column="1" Padding="5" Text="設定を初期化する" Margin="5" VerticalAlignment="Center"/>
             <Button Grid.Row="1" Grid.Column="2" Margin="5" Content="初期化" Command="{Binding SettingResetCommand}" Width="50" HorizontalAlignment="Left"/>
+            <TextBlock Grid.Row="2" Grid.Column="1" Padding="5" Text="モード" Margin="5" VerticalAlignment="Center"/>
+            <WrapPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="2" Margin="10">
+                <RadioButton x:Name="ARadioButton" Content="ダーク" Margin="5" IsChecked="{Binding CheckDark.Value}">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="Checked">
+                            <rp:EventToReactiveCommand Command="{Binding SelectDark}" >
+                                <converter:WithSenderConverter />
+                            </rp:EventToReactiveCommand>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </RadioButton>
+                <RadioButton x:Name="BRadioButton" Content="ライト" Margin="5" IsChecked="{Binding CheckLight.Value}">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="Checked">
+                            <rp:EventToReactiveCommand Command="{Binding SelectLight}" >
+                                <converter:WithSenderConverter />
+                            </rp:EventToReactiveCommand>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </RadioButton>
+            </WrapPanel>
+            <TextBlock Grid.Row="3" Grid.Column="1" Padding="5" Text="カラー" Margin="5" VerticalAlignment="Center"/>
+            <ComboBox Grid.Row="3" Grid.Column="2" x:Name="comboBox" ItemsSource="{Binding ColorList}" Width="100" HorizontalAlignment="Left" SelectedItem="{Binding NowSelectColor.Value}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Name}" Margin="2.5"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectionChanged">
+                        <rp:EventToReactiveCommand Command="{Binding SelectionColorChanged}" >
+                            <converter:WithSenderConverter />
+                        </rp:EventToReactiveCommand>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </ComboBox>
         </Grid>
-        <StackPanel Grid.Row="1" Orientation="Vertical">
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Width="100" Content="OK" Command="{Binding CloseWindow}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}" Margin="5"/>
+            <Button Width="100" Content="キャンセル" Command="{Binding CloseWindowCancel}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}" Margin="5"/>
         </StackPanel>
     </Grid>
 </mah:MetroWindow>
