--- a/MHRiseModManager/Views/SettingWindow.xaml
+++ b/MHRiseModManager/Views/SettingWindow.xaml
@@ -11,8 +11,9 @@
         mc:Ignorable="d"
         xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
         Dialog:DialogParticipation.Register="{Binding}"
+        TitleCharacterCasing="Normal"
         xmlns:vm="clr-namespace:MHRiseModManager.ViewModels"
-        Title="SettingWindow" Height="450" Width="800">
+        Title="設定" Height="450" Width="800">
     <mah:MetroWindow.DataContext>
         <vm:SettingViewModel>
             <vm:SettingViewModel.MahAppsDialogCoordinator>
@@ -43,19 +44,19 @@
             <Button Grid.Row="1" Grid.Column="2" Margin="5" Content="初期化" Command="{Binding SettingResetCommand}" Width="50" HorizontalAlignment="Left"/>
             <TextBlock Grid.Row="2" Grid.Column="1" Padding="5" Text="モード" Margin="5" VerticalAlignment="Center"/>
             <WrapPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="2" Margin="10">
-                <RadioButton x:Name="ARadioButton" Content="ダーク" Margin="5" IsChecked="{Binding CheckDark.Value}">
+                <RadioButton x:Name="BRadioButton" Content="ライト" Margin="5" IsChecked="{Binding CheckLight.Value}">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="Checked">
-                            <rp:EventToReactiveCommand Command="{Binding SelectDark}" >
+                            <rp:EventToReactiveCommand Command="{Binding SelectLight}" >
                                 <converter:WithSenderConverter />
                             </rp:EventToReactiveCommand>
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                 </RadioButton>
-                <RadioButton x:Name="BRadioButton" Content="ライト" Margin="5" IsChecked="{Binding CheckLight.Value}">
+                <RadioButton x:Name="ARadioButton" Content="ダーク" Margin="5" IsChecked="{Binding CheckDark.Value}">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="Checked">
-                            <rp:EventToReactiveCommand Command="{Binding SelectLight}" >
+                            <rp:EventToReactiveCommand Command="{Binding SelectDark}" >
                                 <converter:WithSenderConverter />
                             </rp:EventToReactiveCommand>
                         </i:EventTrigger>
