--- a/MHRiseModManager/Views/MainWindow.xaml
+++ b/MHRiseModManager/Views/MainWindow.xaml
@@ -182,6 +182,12 @@
                             </Label>
                         </WrapPanel>
                         <WrapPanel>
+                            <Label Content="最新バージョン：" Margin="0,0,0,0" Padding="3"/>
+                            <Label Padding="3">
+                                <TextBlock Text="{Binding NowLatestVersion.Value}"/>
+                            </Label>
+                        </WrapPanel>
+                        <WrapPanel>
                             <Label Content="URL：" Margin="0,0,0,0" Padding="3"/>
                             <Label Padding="3">
                                 <Hyperlink NavigateUri="{Binding NowModURL.Value}" Command="{Binding NavigateCommand}">
