Pakファイル対応・登録

--- a/MHRiseModManager/Views/InstallDialog.xaml
+++ b/MHRiseModManager/Views/InstallDialog.xaml
@@ -15,6 +15,9 @@
     <mah:MetroWindow.DataContext>
         <vm:InstallDialogViewModel/>
     </mah:MetroWindow.DataContext>
+    <mah:MetroWindow.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolVisibilityConverter" />
+    </mah:MetroWindow.Resources>
     <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="8*"/>
@@ -30,6 +33,7 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
+                <RowDefinition Height="*"/>
                 <RowDefinition Height="8*" />
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" Grid.Column="1" Padding="5" Text="Mod名(任意)" Margin="5"/>
@@ -38,11 +42,14 @@
             <TextBox Grid.Row="1" Grid.Column="2" Margin="5" Text="{Binding URL.Value}"/>
             <TextBlock Grid.Row="2" Grid.Column="1" Padding="5" Text="バージョン(任意)" Margin="5"/>
             <TextBox Grid.Row="2" Grid.Column="2" Margin="5" Text="{Binding Version.Value}"/>
-            <TextBlock Grid.Row="3" Grid.Column="1" Padding="5" Text="メモ(任意)" Margin="5"/>
-            <TextBox Grid.Row="3" Grid.Column="2" Margin="5" Text="{Binding Memo.Value}" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible"/>
+            <TextBlock Grid.Row="4" Grid.Column="1" Padding="5" Text="メモ(任意)" Margin="5"/>
+            <TextBox Grid.Row="4" Grid.Column="2" Margin="5" Text="{Binding Memo.Value}" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible"/>
+            <TextBlock Grid.Row="3" Grid.Column="1" Padding="5" Text="Pakファイル名" Margin="5" Visibility="{Binding Path=PakMode.Value, Converter={StaticResource BoolVisibilityConverter}}"/>
+            <TextBox Grid.Row="3" Grid.Column="2" Margin="5" Text="{Binding PakFileName.Value}" Visibility="{Binding Path=PakMode.Value, Converter={StaticResource BoolVisibilityConverter}}"/>
         </Grid>
-        <StackPanel Grid.Row="1" Orientation="Vertical">
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Width="100" Content="OK" Command="{Binding CloseWindow}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}" Margin="5"/>
+            <Button Width="100" Content="キャンセル" Command="{Binding CloseWindowCancel}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}" Margin="5"/>
         </StackPanel>
     </Grid>
 </mah:MetroWindow>
